# simplicial-voting

./: flake.nix  pyproject.toml
